--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -628,6 +628,9 @@ jobs:
       - name: Set env
         shell: bash
         run:  printf "${{ matrix.backend == 'llvm' && 'LLVM=1' || matrix.backend == 'clang' && 'CLANG=1'}}" >> $GITHUB_ENV
+      - name: Run unit tests
+        if: matrix.backend=='llvm'
+        run: python -m pytest -n=auto test/unit/ --ignore=test/unit/test_disk_tensor.py --ignore=test/unit/test_elf.py --ignore=test/unit/test_tar.py
       - name: Run pytest (${{ matrix.backend }})
         shell: bash
         run: |
