--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
         language: system
         always_run: true
         pass_filenames: false
-      - id: mypy
+      - id: mypy  # weird
         name: mypy
         entry: python3 -m mypy tinygrad/ --strict-equality
         language: system
