--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -564,6 +564,7 @@ jobs:
         with:
           key: ${{ matrix.backend }}-minimal
           deps: testing_minimal${{matrix.backend=='ptx'&&',cuda'||matrix.backend=='triton'&&',triton'||''}}
+          python-version: '3.11'
           opencl: ${{ matrix.backend == 'gpu' && 'true' }}
           amd: ${{ matrix.backend == 'amd' && 'true' }}
           llvm: ${{ (matrix.backend == 'amd' || matrix.backend == 'llvm') && 'true' }}
@@ -683,7 +684,7 @@ jobs:
       matrix:
         backend: [metal, llvm, cpu]
     name: MacOS (${{ matrix.backend }})
-    runs-on: macos-14
+    runs-on: macos-15
     timeout-minutes: 20
     steps:
       - name: Checkout Code
@@ -693,6 +694,7 @@ jobs:
         with:
           key: macos-${{ matrix.backend }}-minimal
           deps: testing_minimal
+          python-version: '3.11'
           llvm: ${{ matrix.backend == 'llvm' && 'true' }}
       - name: Set env
         run: printf "${{ matrix.backend == 'llvm' && 'LLVM=1' || matrix.backend == 'cpu' && 'CPU=1' || matrix.backend == 'metal' && 'METAL=1\nJIT=2'}}" >> $GITHUB_ENV
